# ProgrammersNotepadNext

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  bootstrap_msvc.sh  clang_format.sh
dep/: CMakeLists.txt
dep/QHexEdit/: CMakeLists.txt
dep/QHexEdit/include/QHexEdit/: chunks.h  commands.h  qhexedit.h
dep/QHexEdit/src/: QHexEditPlugin.cpp  QHexEditPlugin.h  chunks.cpp  commands.cpp  qhexedit.cpp
src/: CMakeLists.txt  application.cpp  application.h  main.cpp  mainwindow.cpp  mainwindow.h  optionsdialog.cpp  optionsdialog.h  optionsdialog.ui  programmersnotepadnext.qrc  searchdialog.cpp  searchdialog.h
src/gui/: editortab.cpp  editortab.h  glyph_button.cpp  glyph_button.h  hexeditor.cpp  hexeditor.h  tab.cpp  tab.h  tabbar.cpp  tabbar.h  tabwidget.cpp  tabwidget.h  texteditor.cpp  texteditor.h
